张猛第次上传 导航栏及其他页面功能修改

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+/* 
+html, body, :global(#root) {
+  height: 100%;
+}
+
+body ,ul,ol,p,h1,h2,h3{
+  margin: 0;
+  padding: 0;
+} */
+
+
 
 html, body, :global(#root) {
   height: 100%;
@@ -6,4 +17,5 @@ html, body, :global(#root) {
 body ,ul,ol,p,h1,h2,h3{
   margin: 0;
   padding: 0;
+  list-style: none;
 }
