--- a/src/routes/IndexPage.css
+++ b/src/routes/IndexPage.css
@@ -1,29 +1,23 @@
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+.layout{
+    background-color: #f6f9fa ;
+}
 
-.normal {
-  font-family: Georgia, sans-serif;
-  margin-top: 3em;
+
+.logo {
+  height: 32px;
+  margin: 16px 0;
   text-align: center;
+  font-size: 1.5em;
+  color: #fcfdfd;
 }
 
-.title {
-  font-size: 2.5rem;
-  font-weight: normal;
-  letter-spacing: -1px;
-}
-
-.welcome {
-  height: 328px;
-  background: url(../assets/yay.jpg) no-repeat center 0;
-  background-size: 388px 328px;
-}
-
-.list {
-  font-size: 1.2em;
-  margin-top: 1.8em;
-  list-style: none;
-  line-height: 1.5em;
-}
-
-.list code {
-  background: #f7f7f7;
+.span{
+    color: #f3f7f6
 }
