许文举_第22次_product图片上传

--- a/src/routes/ProductPage.css
+++ b/src/routes/ProductPage.css
@@ -1,14 +1,19 @@
-.customer {
-    border-radius: 5px;
-    padding: 1em;
-  }
-  
-  .title {
-    line-height: 2em;
-    height: 2em;
-    font-weight: bold;
-  }
-  
-  .btns {
-    margin-bottom: .5em;
-  }
+.product {
+  border-radius: 5px;
+  padding: 1em;
+}
+
+.title {
+  line-height: 2em;
+  height: 2em;
+  font-weight: bold;
+}
+
+.btns {
+  margin-bottom: .5em;
+}
+.search{
+  padding-right: 0%;
+
+margin-left: 80%; 
+}
